[package]
name = "chimp-chaos-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "time"] }
tonic = { version = "0.12.1", features = ["transport"] }
prost = "0.13.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
parking_lot = "0.12.3"
bytes = "1.7.1"

[build-dependencies]
tonic-build = "0.12.1"
protoc-bin-vendored = "3.0.0"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.15"

