[package]
name = "chimp-chaos-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "time"] }
actix-web = { version = "4.11", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
parking_lot = "0.12.3"
bytes = "1.7.1"
prometheus = "0.13.4"

[build-dependencies]

[dev-dependencies]
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12.7", features = ["json"] }

