[package]
name = "chimp-chaos-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "time"] }
actix-web = { version = "4.11.0", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "1.0.69"
parking_lot = "0.12.4"
bytes = "1.10.1"
prometheus = "0.13.4"
anyhow = "1.0.99"
chrono = { version = "0.4.39", features = ["clock"] }

[build-dependencies]

[dev-dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12.23", features = ["json"] }

